--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,8 @@
     "react": "^16.9.0",
     "react-datepicker": "^2.9.6",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.1.1"
+    "react-scripts": "3.1.1",
+    "timeago.js": "^4.0.0-beta.2"
   },
   "scripts": {
     "start": "react-scripts start",
