--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "react": "^16.9.0",
     "react-datepicker": "^2.9.6",
     "react-dom": "^16.9.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.1.1",
     "timeago.js": "^4.0.0-beta.2"
   },
