--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "react": "^16.9.0",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-datepicker": "^2.9.6",
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.1.2",
